service stat interface edit
