# dto/service.go
@@ -101,3 +101,12 @@ type ServiceUpdateHTTPInput struct {
 func (param *ServiceUpdateHTTPInput) BindValidParam(c *gin.Context) error {
 	return public.DefaultGetValidParams(c, param)
 }
+
+type ServiceStatOutput struct {
+	Today     []int64 `json:"today" form:"today" comment:"今日流量" example:"" validate:""`
+	Yesterday []int64 `json:"yesterday" form:"yesterday" comment:"昨日流量" example:"" validate:""`
+}
+
+func (param *ServiceStatOutput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, param)
+}
